6-Aspen Mesh Installation/sample test/cluster3 - gke-DEV-Edge1/httpbin-istio-apps-ServiceEntry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-istio-apps
spec:
  hosts:
  # must be of form name.namespace.global
  - httpbin.istio-apps.global
  # Treat remote cluster services as part of the service mesh
  # as all clusters in the service mesh share the same root of trust.
  location: MESH_INTERNAL
  ports:
  - name: http1
    number: 8000
    protocol: http
  resolution: DNS
  addresses:
  # the IP address to which httpbin.istio-apps.global will resolve to
  # must be unique for each remote service, within a given cluster.
  # This address need not be routable. Traffic for this IP will be captured
  # by the sidecar and routed appropriately.
  - 240.0.0.60
  endpoints:
  # This is the routable address of the ingress gateway in cluster2 that
  # sits in front of sleep.foo service. Traffic from the sidecar will be
  # routed to this address.
  #- address: 10.4.0.83
  - address: 203.134.121.91
    ports:
     #  http1: 30307 # Do not change this port value
     http1: 15443 # Do not change this port value
